--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<li class="active"><a href="#">Welcome</a></li>
         <li><a href="./sysinfo.html">System Info</a></li>
         <li><a href="./dump.html">Memory/Module Dumper</a></li>
-        <li><a href="./FileBroswer.html">FileBroswer</a></li>
+        <li><a href="./FileBrowser.html">FileBrowser</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="#">Latest Compatible Firmware: 3.55</a></li>
