--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <hr />
       <a href="poc.html"><button type="button" class="btn btn-danger">3.55 POC Test</button></a>
       <a href="sysinfo.html"><button type="button" class="btn btn-info">See my system information</button></a>
-      <button type="button" class="btn btn-success" disabled>Browse my filesystem</button>
+      <a href="FileBrowser.html"><button type="button" class="btn btn-success">FileBrowser</button></a>
       <button type="button" class="btn btn-primary" disabled>Play Emulated Games!</button>
     </div>
 
