--- a/dump.html
+++ b/dump.html
@@ -36,7 +36,7 @@
 				<li><a href="./index.html">Welcome</a></li>
         <li><a href="./sysinfo.html">System Info</a></li>
         <li class="active"><a href="#">Memory/Module Dumper</a></li>
-        <li><a href="#">File Browser (Coming Soon)</a></li>
+        <li><a href="./FileBrowser.html">FileBrowser</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="#">Latest Compatible Firmware: 3.55</a></li>
